--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#">Blogs</a>
         </nav>
         <div class="buttons">
-            <!-- <button >
+             <button >
                 <i class="fa-solid fa-magnifying-glass"></i>
                 
             </button>
@@ -32,7 +32,7 @@
             </button>
             <button>
                 <i class="fa-solid fa-bars"></i>
-            </button> -->
+            </button> 
         </div>
     </header>
     <!-- header end -->
