--- a/index.html
+++ b/index.html
@@ -36,6 +36,139 @@
         </div>
     </header>
     <!-- header end -->
+    <!-- home start -->
+<section class="home">
+    <div class="content">
+    <h3>GEMICHI HOME DELIVERY</h3>
+    <p>
+        Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. 
+        Laboriosam Quos Repellendus Aliquam Quam Aperiam Quas?
+    </p>
+    <a href="#" class="btn">Order Now</a>
+</div>
+</section>
+    <!-- home end -->
+    <!-- menu start -->
+ <section class="menu">
+    <h1 class="heading">our <span>menu</span></h1>
+    <div class="box-container">
+        <div class="box">
+            <div class="box-head">
+                <img src="./images/menu-1.png" alt="menu">
+                <span class="menu-category">PIZZA</span>
+                <h3>6 Mini Pizzas</h3>
+                <div class="price">$109.99 <span>119.99</span></div>
+            </div>
+            <div class="box-bottom">
+                <a href="#" class="btn"> add to cart</a>
+            </div>
+        </div>
 
+        <div class="box">
+            <div class="box-head">
+                <img src="./images/menu-2.png" alt="menu">
+                <span class="menu-category">burger</span>
+                <h3>5 Mini Burgers</h3>
+                <div class="price">$99.99 <span>109.99</span></div>
+            </div>
+            <div class="box-bottom">
+                <a href="#" class="btn"> add to cart</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="box-head">
+                <img src="./images/menu-3.png" alt="menu">
+                <span class="menu-category">PIZZA</span>
+                <h3>2 Mixed Pizzas</h3>
+                <div class="price">$49.99 <span>59.99</span></div>
+            </div>
+            <div class="box-bottom">
+                <a href="#" class="btn"> add to cart</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="box-head">
+                <img src="./images/menu-4.png" alt="menu">
+                <span class="menu-category">burger</span>
+                <h3>6 Burgers</h3>
+                <div class="price">$79.99 <span>89.99</span></div>
+            </div>
+            <div class="box-bottom">
+                <a href="#" class="btn"> add to cart</a>
+            </div>
+        </div>
+        
+    </div>
+ </section>
+    <!-- menu end -->
+    <!-- products start -->
+    <section class="products">
+        <h1 class="heading">our <span>products</span></h1>
+        <div class="box">
+            <div class="box-head">
+                <span class="title">MINI BURGER</span>
+                <a href="#" class="name"> Baacon Burger</a>
+            </div>
+            <div class="image">
+                <img src="./images/product-1.png" alt="product">
+            </div>
+            <div class="box-bottom">
+                <div class="info">
+                    <b class="price">$6.00</b>
+                    <span class="amount">110gr / 300cal</span>
+                </div>
+                <div class="product-btn">
+                    <a href="#">
+                       <i class="fas fa-plus"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="box-head">
+                <span class="title">MINI BURGER</span>
+                <a href="#" class="name"> Baacon Burger</a>
+            </div>
+            <div class="image">
+                <img src="./images/product-2.png" alt="product">
+            </div>
+            <div class="box-bottom">
+                <div class="info">
+                    <b class="price">$24.00</b>
+                    <span class="amount">110gr / 300cal</span>
+                </div>
+                <div class="product-btn">
+                    <a href="#">
+                       <i class="fas fa-plus"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="box-head">
+                <span class="title">MINI BURGER</span>
+                <a href="#" class="name"> Baacon Burger</a>
+            </div>
+            <div class="image">
+                <img src="./images/dark-product.jpg" alt="product">
+            </div>
+            <div class="box-bottom">
+                <div class="info">
+                    <b class="price">$28.00</b>
+                    <span class="amount">110gr / 320cal</span>
+                </div>
+                <div class="product-btn">
+                    <a href="#">
+                       <i class="fas fa-plus"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- products end -->
 </body>
 </html>
