--- a/index.html
+++ b/index.html
@@ -106,10 +106,11 @@
     <!-- products start -->
     <section class="products">
         <h1 class="heading">our <span>products</span></h1>
+        <div class="box-container">
         <div class="box">
             <div class="box-head">
                 <span class="title">MINI BURGER</span>
-                <a href="#" class="name"> Baacon Burger</a>
+                <a href="#" class="name"> Bacon Burger</a>
             </div>
             <div class="image">
                 <img src="./images/product-1.png" alt="product">
@@ -130,7 +131,7 @@
         <div class="box">
             <div class="box-head">
                 <span class="title">MINI BURGER</span>
-                <a href="#" class="name"> Baacon Burger</a>
+                <a href="#" class="name"> Bacon Burger</a>
             </div>
             <div class="image">
                 <img src="./images/product-2.png" alt="product">
@@ -148,10 +149,10 @@
             </div>
         </div>
 
-        <div class="box">
+        <div class="box dark-bg">
             <div class="box-head">
                 <span class="title">MINI BURGER</span>
-                <a href="#" class="name"> Baacon Burger</a>
+                <a href="#" class="name"> Bacon Burger</a>
             </div>
             <div class="image">
                 <img src="./images/dark-product.jpg" alt="product">
@@ -168,6 +169,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </section>
     <!-- products end -->
 </body>
