--- a/index.html
+++ b/index.html
@@ -1,176 +1,272 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./styles/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Pizza Home</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- header start -->
     <header class="header">
-        <a href="#" class="logo">
-            <img src="images/logo (2).png" alt="logo" />
-        </a>
-        <nav class="navbar">
-            <a href="#" class="active">Home</a>
-            <a href="#">About</a>
-            <a href="#">Menu</a>
-            <a href="#">Products</a>
-            <a href="#">Review</a>
-            <a href="#">Contact</a>
-            <a href="#">Blogs</a>
-        </nav>
-        <div class="buttons">
-             <button >
-                <i class="fa-solid fa-magnifying-glass"></i>
-                
-            </button>
-            <button >
-                <i class="fa-sharp fa-solid fa-cart-shopping"></i>
-            </button>
-            <button>
-                <i class="fa-solid fa-bars"></i>
-            </button> 
-        </div>
+      <a href="#" class="logo">
+        <img src="images/logo (2).png" alt="logo" />
+      </a>
+      <nav class="navbar">
+        <a href="#" class="active">Home</a>
+        <a href="#">About</a>
+        <a href="#">Menu</a>
+        <a href="#">Products</a>
+        <a href="#">Review</a>
+        <a href="#">Contact</a>
+        <a href="#">Blogs</a>
+      </nav>
+      <div class="buttons">
+        <button>
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </button>
+        <button>
+          <i class="fa-sharp fa-solid fa-cart-shopping"></i>
+        </button>
+        <button>
+          <i class="fa-solid fa-bars"></i>
+        </button>
+      </div>
     </header>
     <!-- header end -->
     <!-- home start -->
-<section class="home">
-    <div class="content">
-    <h3>GEMICHI HOME DELIVERY</h3>
-    <p>
-        Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. 
-        Laboriosam Quos Repellendus Aliquam Quam Aperiam Quas?
-    </p>
-    <a href="#" class="btn">Order Now</a>
-</div>
-</section>
+    <section class="home">
+      <div class="content">
+        <h3>GEMICHI HOME DELIVERY</h3>
+        <p>
+          Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Laboriosam
+          Quos Repellendus Aliquam Quam Aperiam Quas?
+        </p>
+        <a href="#" class="btn">Order Now</a>
+      </div>
+    </section>
     <!-- home end -->
     <!-- menu start -->
- <section class="menu">
-    <h1 class="heading">our <span>menu</span></h1>
-    <div class="box-container">
+    <section class="menu">
+      <h1 class="heading">our <span>menu</span></h1>
+      <div class="box-container">
         <div class="box">
-            <div class="box-head">
-                <img src="./images/menu-1.png" alt="menu">
-                <span class="menu-category">PIZZA</span>
-                <h3>6 Mini Pizzas</h3>
-                <div class="price">$109.99 <span>119.99</span></div>
-            </div>
-            <div class="box-bottom">
-                <a href="#" class="btn"> add to cart</a>
-            </div>
+          <div class="box-head">
+            <img src="./images/menu-1.png" alt="menu" />
+            <span class="menu-category">PIZZA</span>
+            <h3>6 Mini Pizzas</h3>
+            <div class="price">$109.99 <span>119.99</span></div>
+          </div>
+          <div class="box-bottom">
+            <a href="#" class="btn"> add to cart</a>
+          </div>
         </div>
 
         <div class="box">
-            <div class="box-head">
-                <img src="./images/menu-2.png" alt="menu">
-                <span class="menu-category">burger</span>
-                <h3>5 Mini Burgers</h3>
-                <div class="price">$99.99 <span>109.99</span></div>
-            </div>
-            <div class="box-bottom">
-                <a href="#" class="btn"> add to cart</a>
-            </div>
+          <div class="box-head">
+            <img src="./images/menu-2.png" alt="menu" />
+            <span class="menu-category">burger</span>
+            <h3>5 Mini Burgers</h3>
+            <div class="price">$99.99 <span>109.99</span></div>
+          </div>
+          <div class="box-bottom">
+            <a href="#" class="btn"> add to cart</a>
+          </div>
         </div>
 
         <div class="box">
-            <div class="box-head">
-                <img src="./images/menu-3.png" alt="menu">
-                <span class="menu-category">PIZZA</span>
-                <h3>2 Mixed Pizzas</h3>
-                <div class="price">$49.99 <span>59.99</span></div>
-            </div>
-            <div class="box-bottom">
-                <a href="#" class="btn"> add to cart</a>
-            </div>
+          <div class="box-head">
+            <img src="./images/menu-3.png" alt="menu" />
+            <span class="menu-category">PIZZA</span>
+            <h3>2 Mixed Pizzas</h3>
+            <div class="price">$49.99 <span>59.99</span></div>
+          </div>
+          <div class="box-bottom">
+            <a href="#" class="btn"> add to cart</a>
+          </div>
         </div>
 
         <div class="box">
-            <div class="box-head">
-                <img src="./images/menu-4.png" alt="menu">
-                <span class="menu-category">burger</span>
-                <h3>6 Burgers</h3>
-                <div class="price">$79.99 <span>89.99</span></div>
-            </div>
-            <div class="box-bottom">
-                <a href="#" class="btn"> add to cart</a>
-            </div>
+          <div class="box-head">
+            <img src="./images/menu-4.png" alt="menu" />
+            <span class="menu-category">burger</span>
+            <h3>6 Burgers</h3>
+            <div class="price">$79.99 <span>89.99</span></div>
+          </div>
+          <div class="box-bottom">
+            <a href="#" class="btn"> add to cart</a>
+          </div>
         </div>
-        
-    </div>
- </section>
+      </div>
+    </section>
     <!-- menu end -->
     <!-- products start -->
     <section class="products">
-        <h1 class="heading">our <span>products</span></h1>
-        <div class="box-container">
+      <h1 class="heading">our <span>products</span></h1>
+      <div class="box-container">
         <div class="box">
-            <div class="box-head">
-                <span class="title">MINI BURGER</span>
-                <a href="#" class="name"> Bacon Burger</a>
+          <div class="box-head">
+            <span class="title">MINI BURGER</span>
+            <a href="#" class="name"> Bacon Burger</a>
+          </div>
+          <div class="image">
+            <img src="./images/product-1.png" alt="product" />
+          </div>
+          <div class="box-bottom">
+            <div class="info">
+              <b class="price">$6.00</b>
+              <span class="amount">110gr / 300cal</span>
             </div>
-            <div class="image">
-                <img src="./images/product-1.png" alt="product">
+            <div class="product-btn">
+              <a href="#">
+                <i class="fas fa-plus"></i>
+              </a>
             </div>
-            <div class="box-bottom">
-                <div class="info">
-                    <b class="price">$6.00</b>
-                    <span class="amount">110gr / 300cal</span>
-                </div>
-                <div class="product-btn">
-                    <a href="#">
-                       <i class="fas fa-plus"></i>
-                    </a>
-                </div>
-            </div>
+          </div>
         </div>
 
         <div class="box">
-            <div class="box-head">
-                <span class="title">MINI BURGER</span>
-                <a href="#" class="name"> Bacon Burger</a>
+          <div class="box-head">
+            <span class="title">MINI BURGER</span>
+            <a href="#" class="name"> Bacon Burger</a>
+          </div>
+          <div class="image">
+            <img src="./images/product-2.png" alt="product" />
+          </div>
+          <div class="box-bottom">
+            <div class="info">
+              <b class="price">$24.00</b>
+              <span class="amount">110gr / 300cal</span>
             </div>
-            <div class="image">
-                <img src="./images/product-2.png" alt="product">
+            <div class="product-btn">
+              <a href="#">
+                <i class="fas fa-plus"></i>
+              </a>
             </div>
-            <div class="box-bottom">
-                <div class="info">
-                    <b class="price">$24.00</b>
-                    <span class="amount">110gr / 300cal</span>
-                </div>
-                <div class="product-btn">
-                    <a href="#">
-                       <i class="fas fa-plus"></i>
-                    </a>
-                </div>
-            </div>
+          </div>
         </div>
 
         <div class="box dark-bg">
-            <div class="box-head">
-                <span class="title">MINI BURGER</span>
-                <a href="#" class="name"> Bacon Burger</a>
+          <div class="box-head">
+            <span class="title">MINI BURGER</span>
+            <a href="#" class="name"> Bacon Burger</a>
+          </div>
+          <div class="image">
+            <img src="./images/dark-product.jpg" alt="product" />
+          </div>
+          <div class="box-bottom">
+            <div class="info">
+              <b class="price">$28.00</b>
+              <span class="amount">110gr / 320cal</span>
             </div>
-            <div class="image">
-                <img src="./images/dark-product.jpg" alt="product">
+            <div class="product-btn">
+              <a href="#">
+                <i class="fas fa-plus"></i>
+              </a>
             </div>
-            <div class="box-bottom">
-                <div class="info">
-                    <b class="price">$28.00</b>
-                    <span class="amount">110gr / 320cal</span>
-                </div>
-                <div class="product-btn">
-                    <a href="#">
-                       <i class="fas fa-plus"></i>
-                    </a>
-                </div>
-            </div>
+          </div>
         </div>
-    </div>
+      </div>
     </section>
     <!-- products end -->
-</body>
+    <!-- about start -->
+    <section class="about">
+      <h1 class="heading">about <span>us</span></h1>
+      <div class="row">
+        <div class="image">
+          <img src="/images/about.jpg" alt="about" />
+        </div>
+        <div class="content">
+          <h3>What Is The Secret Recipe Of Our Burgers?</h3>
+          <p>
+            Lorem Ipsum, Dolor Sit Amet Consectetur Adipisicing Elit. Quisquam
+            Voluptatem Facere Amet Temporibus Culpa Sit Illo Earum Cupiditate
+            Soluta Perferendis!
+          </p>
+          <p>
+            Lorem Ipsum, Dolor Sit Amet Consectetur Adipisicing Elit. Quisquam
+            Voluptatem Facere Amet Temporibus Culpa Sit Illo Earum Cupiditate
+            Soluta Perferendis!
+          </p>
+          <p>
+            Lorem Ipsum, Dolor Sit Amet Consectetur Adipisicing Elit. Quisquam
+            Voluptatem Facere Amet Temporibus Culpa Sit Illo Earum Cupiditate
+            Soluta Perferendis!
+          </p>
+          <a href="#" class="btn">learn more</a>
+        </div>
+      </div>
+    </section>
+    <!-- about end -->
+    <!-- review start -->
+    <section class="review">
+      <h1 class="heading">customer's <span>revieww</span></h1>
+      <div class="box-container">
+        <div class="box">
+          <img src="./images/quote.png" alt="quote" />
+          <p>
+            Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Autem Nulla
+            Repellendus Similique Porro Explicabo, Blanditiis Voluptatibus
+            Obcaecati Harum Est, Eos Quo Modi Alias. Possimus Odio Quam Ex Earum
+            Ducimus! Officia.
+          </p>
+          <img src="./images/avatar-1.png" alt="avatar" class="user"/>
+          <h3> Serena Williams</h3>
+          <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+        </div>
+
+        <div class="box">
+          <img src="./images/quote.png" alt="quote" />
+          <p>
+            Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Autem Nulla
+            Repellendus Similique Porro Explicabo, Blanditiis Voluptatibus
+            Obcaecati Harum Est, Eos Quo Modi Alias. Possimus Odio Quam Ex Earum
+            Ducimus! Officia.
+          </p>
+          <img src="./images/avatar-2.png" alt="avatar" class="user"/>
+          <h3> Toni Kross</h3>
+          <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+        </div>
+
+        <div class="box">
+          <img src="./images/quote.png" alt="quote" />
+          <p>
+            Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Autem Nulla
+            Repellendus Similique Porro Explicabo, Blanditiis Voluptatibus
+            Obcaecati Harum Est, Eos Quo Modi Alias. Possimus Odio Quam Ex Earum
+            Ducimus! Officia.
+          </p>
+          <img src="./images/avatar-3.png" alt="avatar" class="user"/>
+          <h3>Mckenna Grace</h3>
+          <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- review end -->
+  </body>
 </html>
