--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
             Obcaecati Harum Est, Eos Quo Modi Alias. Possimus Odio Quam Ex Earum
             Ducimus! Officia.
           </p>
-          <img src="./images/avatar-1.png" alt="avatar" class="user"/>
-          <h3> Serena Williams</h3>
+          <img src="./images/avatar-1.png" alt="avatar" class="user" />
+          <h3>Serena Williams</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -236,8 +236,8 @@
             Obcaecati Harum Est, Eos Quo Modi Alias. Possimus Odio Quam Ex Earum
             Ducimus! Officia.
           </p>
-          <img src="./images/avatar-2.png" alt="avatar" class="user"/>
-          <h3> Toni Kross</h3>
+          <img src="./images/avatar-2.png" alt="avatar" class="user" />
+          <h3>Toni Kross</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -255,7 +255,7 @@
             Obcaecati Harum Est, Eos Quo Modi Alias. Possimus Odio Quam Ex Earum
             Ducimus! Officia.
           </p>
-          <img src="./images/avatar-3.png" alt="avatar" class="user"/>
+          <img src="./images/avatar-3.png" alt="avatar" class="user" />
           <h3>Mckenna Grace</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -268,5 +268,114 @@
       </div>
     </section>
     <!-- review end -->
+    <!-- contact start -->
+    <section class="contact">
+      <h1 class="heading">contact <span>us</span></h1>
+      <div class="row">
+        <iframe
+          class="map"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d194473.18588939894!2d49.8549596!3d40.394592499999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40307d6bd6211cf9%3A0x343f6b5e7ae56c6b!2zQmFrxLE!5e0!3m2!1saz!2saz!4v1688662199067!5m2!1saz!2saz"
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+        <form>
+          <h3>get in touch</h3>
+          <div class="input-box">
+            <i class="fas fa-user"></i>
+            <input type="text" placeholder="name" />
+          </div>
+
+          <div class="input-box">
+            <i class="fas fa-envelope"></i>
+            <input type="email" placeholder="name" />
+          </div>
+
+          <div class="input-box">
+            <i class="fas fa-phone"></i>
+            <input type="number" placeholder="name" />
+          </div>
+          <input type="submit" class="btn" value="contact now" />
+        </form>
+      </div>
+    </section>
+    <!-- contact end -->
+    <!-- blog start -->
+    <section class="blog">
+      <h1 class="heading">our <span>blog</span></h1>
+      <div class="box-container">
+        <div class="box">
+          <div class="image">
+            <img src="./images/blog-1.jpg" alt="blog" />
+          </div>
+          <div class="content">
+            <a href="#" class="title">how to make burgers?</a>
+            <span>by admin / 10st may, 2023</span>
+            <p>
+              Lorem Ipsum Dolor Sit Amet Consectetur, Adipisicing Elit.
+              Temporibus, Laudantium!
+            </p>
+            <a href="#" class="btn"> read more</a>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="image">
+            <img src="./images/blog-2.jpg" alt="blog" />
+          </div>
+          <div class="content">
+            <a href="#" class="title">how to make burgers?</a>
+            <span>by admin / 15st may, 2023</span>
+            <p>
+              Lorem Ipsum Dolor Sit Amet Consectetur, Adipisicing Elit.
+              Temporibus, Laudantium!
+            </p>
+            <a href="#" class="btn"> read more</a>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="image">
+            <img src="./images/blog-3.jpg" alt="blog" />
+          </div>
+          <div class="content">
+            <a href="#" class="title">how to make burgers?</a>
+            <span>by admin / 18st may, 2023</span>
+            <p>
+              Lorem Ipsum Dolor Sit Amet Consectetur, Adipisicing Elit.
+              Temporibus, Laudantium!
+            </p>
+            <a href="#" class="btn"> read more</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- blog end -->
+    <!-- footer start -->
+    <section class="footer">
+      <div class="search">
+        <input type="text" class="search-input" placeholder="Search">
+        <button class="btn btn-primary">search</button>
+      </div>
+      <div class="share">
+        <a href="#" class="fab fa-facebook"></a>
+        <a href="#" class="fab fa-twitter"></a>
+        <a href="#" class="fab fa-instagram"></a>
+        <a href="#" class="fab fa-linkedin"></a>
+        <a href="#" class="fab fa-telegram"></a>
+      </div>
+      <div class="links">
+        <a href="#" class="active">Home</a>
+        <a href="#">About</a>
+        <a href="#">Menu</a>
+        <a href="#">Products</a>
+        <a href="#">Review</a>
+        <a href="#">Contact</a>
+        <a href="#">Blogs</a>
+      </div>
+      <div class="credit">
+        Created By <span>Fuad Gemichi</span> | All Rigths Reserved
+      </div>
+    </section>
+    <!-- footer end -->
   </body>
 </html>
